moved index.html's swirl animation inline script into its own file, swirl.js & updated README

--- a/index.html
+++ b/index.html
@@ -97,16 +97,9 @@
     <!-- footer -->
     <footer class="footer"></footer>
 
-    <!-- custom script -->
+    <!-- custom scripts -->
+    <script src="/scripts/swirl.js"></script>
     <script src="/scripts/yellow.js"></script>
-    <script>
-        // show swirl animation when page loads
-        const background = document.querySelector('.swirl');
-        window.onload = () => {
-            background.style.opacity = 0;
-            background.style.transform = 'scale(8) rotate(180deg)';
-        }
-    </script>
     <script src="/scripts/copyright.js"></script>
 
 </body>
