--- a/level1.html
+++ b/level1.html
@@ -322,7 +322,7 @@
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
         crossorigin="anonymous"></script>
 
-    <!-- custom script -->
+    <!-- custom scripts -->
     <script src="/scripts/yellow.js"></script>
     <script src="/scripts/alphabet.js"></script>
     <script src="/scripts/copyright.js"></script>
