added highFive.js script, updated styles.css, level1.html, level2.html, level3.html, and README accordingly

--- a/level1.html
+++ b/level1.html
@@ -33,7 +33,7 @@
 
     <!-- header -->
     <header class="heading-container">
-        <img src="/assets/logo256.png" alt="logo" onclick="location.href='/index.html'">
+        <img src="/assets/logo256.png" class="hand" alt="logo" onclick="location.href='/index.html'">
         <span class="heading-text">
             <h1>f-it.</h1>
             <small>high-intensity interval training <br>for programmers</small>
@@ -324,6 +324,7 @@
 
     <!-- custom scripts -->
     <script src="/scripts/yellow.js"></script>
+    <script src="/scripts/highFive.js"></script>
     <script src="/scripts/alphabet.js"></script>
     <script src="/scripts/copyright.js"></script>
 
