--- a/level2.html
+++ b/level2.html
@@ -33,7 +33,7 @@
 
     <!-- header -->
     <header class="heading-container">
-        <img src="/assets/logo256.png" alt="logo" onclick="location.href='/index.html'">
+        <img src="/assets/logo256.png" class="hand" alt="logo" onclick="location.href='/index.html'">
         <span class="heading-text">
             <h1>f-it.</h1>
             <small>high-intensity interval training <br>for programmers</small>
@@ -99,8 +99,17 @@
     <!-- footer -->
     <footer class="footer"></footer>
 
+    <!-- bootstrap 5 scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
+
     <!-- custom scripts -->
     <script src="/scripts/yellow.js"></script>
+    <script src="/scripts/highFive.js"></script>
     <script src="/scripts/speller.js"></script>
     <script src="/scripts/copyright.js"></script>
 
