refactored speller.js code, added countdown timer to AMRAP, details noted in speller.js section of README

--- a/level2.html
+++ b/level2.html
@@ -73,7 +73,7 @@
         <div class="content-blob">
             <div class="content-div">
                 <h3>AMRAP</h3>
-                <p>as many reps as possible in 20000 milliseconds</p>
+                <p>as many reps as possible in <span class="timer">?</span><span class="timer-seconds">s</span></p>
             </div>
         </div>
     </div>
