moved words array out of speller.js into its own file: words.js, level1.html words are now dynamically generated by words.js, noted changes in README

--- a/level1.html
+++ b/level1.html
@@ -69,6 +69,7 @@
     </nav>
 
     <!-- main content -->
+    <!-- ⚠️ Words are dynamically set/overridden by words.js. Words shown here are just placeholders. -->
     <div class="pattern-bg stripes">
         <div class="content-blob" data-key="a">
             <div class="content-div" data-key="a">
@@ -325,6 +326,7 @@
     <!-- custom scripts -->
     <script src="/scripts/yellow.js"></script>
     <script src="/scripts/highFive.js"></script>
+    <script type="module" src="/scripts/words.js"></script>
     <script src="/scripts/alphabet.js"></script>
     <script src="/scripts/copyright.js"></script>
 
