--- a/level2.html
+++ b/level2.html
@@ -110,7 +110,8 @@
     <!-- custom scripts -->
     <script src="/scripts/yellow.js"></script>
     <script src="/scripts/highFive.js"></script>
-    <script src="/scripts/speller.js"></script>
+    <script type="module" src="/scripts/words.js"></script>
+    <script type="module" src="/scripts/speller.js"></script>
     <script src="/scripts/copyright.js"></script>
 
 </body>
