added clock animation/counter to emom, changes noted in README

--- a/level2.html
+++ b/level2.html
@@ -81,8 +81,8 @@
     <div class="pattern-bg polka-dots">
         <div class="content-blob">
             <div class="content-div">
-                <h3>EMOM</h3>
-                <p>every minute on the minute</p>
+                <h3>EM<span class="clock">O</span>M</h3>
+                <p class="emom-subheader">every minute on the minute</p>
                 <button type="button" class="btn btn-lg btn-outline-dark">start</button>
             </div>
         </div>
