created three new blob classes--one for each of the three bg patterns--to vary the blob shapes

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <!-- main content -->
     <div class="pattern-bg stripes">
-        <div class="content-blob">
+        <div class="content-blob blob1">
             <div class="content-div">
                 <h3>ready?</h3>
                 <p>power up your fingers.</p>
@@ -77,7 +77,7 @@
     </div>
 
     <div class="pattern-bg polka-dots">
-        <div class="content-blob">
+        <div class="content-blob blob2">
             <div class="content-div">
                 <h3>set...</h3>
                 <p>show those bugs no mercy.</p>
@@ -86,7 +86,7 @@
     </div>
 
     <div class="pattern-bg zig-zag">
-        <div class="content-blob">
+        <div class="content-blob blob3">
             <div class="content-div">
                 <h3 class="fast">GO!</h3>
                 <img src="/assets/power-finger.gif" alt="power finger">
