--- a/level1.html
+++ b/level1.html
@@ -71,7 +71,7 @@
     <!-- main content -->
     <!-- ⚠️ Words are dynamically set/overridden by words.js. Words shown here are just placeholders. -->
     <div class="pattern-bg stripes">
-        <div class="content-blob" data-key="a">
+        <div class="content-blob blob1" data-key="a">
             <div class="content-div" data-key="a">
                 <p>'a' is for <b>ANNIHILATE</b>.</p>
                 <p>hit the <kbd>a</kbd> key on your keyboard to start workout.</p>
@@ -80,7 +80,7 @@
     </div>
 
     <div class="pattern-bg polka-dots">
-        <div class="content-blob" data-key="b">
+        <div class="content-blob blob2" data-key="b">
             <div class="content-div" data-key="b">
                 <p>'b' is for <b>BANISH</b>.</p>
                 <p>hit the <kbd>b</kbd> key on your keyboard to start workout.</p>
@@ -89,7 +89,7 @@
     </div>
 
     <div class="pattern-bg zig-zag">
-        <div class="content-blob" data-key="c">
+        <div class="content-blob blob3" data-key="c">
             <div class="content-div" data-key="c">
                 <p>'c' is for <b>CRUSH</b>.</p>
                 <p>hit the <kbd>c</kbd> key on your keyboard to start workout.</p>
@@ -98,7 +98,7 @@
     </div>
 
     <div class="pattern-bg polka-dots">
-        <div class="content-blob" data-key="d">
+        <div class="content-blob blob2" data-key="d">
             <div class="content-div" data-key="d">
                 <p>'d' is for <b>DEMOLISH</b>.</p>
                 <p>hit the <kbd>d</kbd> key on your keyboard to start workout.</p>
@@ -107,7 +107,7 @@
     </div>
 
     <div class="pattern-bg stripes">
-        <div class="content-blob" data-key="e">
+        <div class="content-blob blob1" data-key="e">
             <div class="content-div" data-key="e">
                 <p>'e' is for <b>ERADICATE</b>.</p>
                 <p>hit the <kbd>e</kbd> key on your keyboard to start workout.</p>
@@ -116,7 +116,7 @@
     </div>
 
     <div class="pattern-bg polka-dots">
-        <div class="content-blob" data-key="f">
+        <div class="content-blob blob2" data-key="f">
             <div class="content-div" data-key="f">
                 <p>'f' is for <b>FIZZLE</b>.</p>
                 <p>hit the <kbd>f</kbd> key on your keyboard to start workout.</p>
@@ -125,7 +125,7 @@
     </div>
 
     <div class="pattern-bg zig-zag">
-        <div class="content-blob" data-key="g">
+        <div class="content-blob blob3" data-key="g">
             <div class="content-div" data-key="g">
                 <p>'g' is for <b>GELD</b>.</p>
                 <p>hit the <kbd>g</kbd> key on your keyboard to start workout.</p>
@@ -134,7 +134,7 @@
     </div>
 
     <div class="pattern-bg polka-dots">
-        <div class="content-blob" data-key="h">
+        <div class="content-blob blob2" data-key="h">
             <div class="content-div" data-key="h">
                 <p>'h' is for <b>HINDER</b>.</p>
                 <p>hit the <kbd>h</kbd> key on your keyboard to start workout.</p>
@@ -143,7 +143,7 @@
     </div>
 
     <div class="pattern-bg stripes">
-        <div class="content-blob" data-key="i">
+        <div class="content-blob blob1" data-key="i">
             <div class="content-div" data-key="i">
                 <p>'i' is for <b>INVALIDATE</b>.</p>
                 <p>hit the <kbd>i</kbd> key on your keyboard to start workout.</p>
@@ -152,7 +152,7 @@
     </div>
 
     <div class="pattern-bg polka-dots">
-        <div class="content-blob" data-key="j">
+        <div class="content-blob blob2" data-key="j">
             <div class="content-div" data-key="j">
                 <p>'j' is for <b>JETTISON</b>.</p>
                 <p>hit the <kbd>j</kbd> key on your keyboard to start workout.</p>
@@ -161,7 +161,7 @@
     </div>
 
     <div class="pattern-bg zig-zag">
-        <div class="content-blob" data-key="k">
+        <div class="content-blob blob3" data-key="k">
             <div class="content-div" data-key="k">
                 <p>'k' is for <b>KILL</b>.</p>
                 <p>hit the <kbd>k</kbd> key on your keyboard to start workout.</p>
@@ -170,7 +170,7 @@
     </div>
 
     <div class="pattern-bg polka-dots">
-        <div class="content-blob" data-key="l">
+        <div class="content-blob blob2" data-key="l">
             <div class="content-div" data-key="l">
                 <p>'l' is for <b>LIQUIDATE</b>.</p>
                 <p>hit the <kbd>l</kbd> key on your keyboard to start workout.</p>
@@ -179,7 +179,7 @@
     </div>
 
     <div class="pattern-bg stripes">
-        <div class="content-blob" data-key="m">
+        <div class="content-blob blob1" data-key="m">
             <div class="content-div" data-key="m">
                 <p>'m' is for <b>MAR</b>.</p>
                 <p>hit the <kbd>m</kbd> key on your keyboard to start workout.</p>
@@ -188,7 +188,7 @@
     </div>
 
     <div class="pattern-bg polka-dots">
-        <div class="content-blob" data-key="n">
+        <div class="content-blob blob2" data-key="n">
             <div class="content-div" data-key="n">
                 <p>'n' is for <b>NULLIFY</b>.</p>
                 <p>hit the <kbd>n</kbd> key on your keyboard to start workout.</p>
@@ -197,7 +197,7 @@
     </div>
 
     <div class="pattern-bg zig-zag">
-        <div class="content-blob" data-key="o">
+        <div class="content-blob blob3" data-key="o">
             <div class="content-div" data-key="o">
                 <p>'o' is for <b>OBLITERATE</b>.</p>
                 <p>hit the <kbd>o</kbd> key on your keyboard to start workout.</p>
@@ -206,7 +206,7 @@
     </div>
 
     <div class="pattern-bg polka-dots">
-        <div class="content-blob" data-key="p">
+        <div class="content-blob blob2" data-key="p">
             <div class="content-div" data-key="p">
                 <p>'p' is for <b>PULVERIZE</b>.</p>
                 <p>hit the <kbd>p</kbd> key on your keyboard to start workout.</p>
@@ -215,7 +215,7 @@
     </div>
 
     <div class="pattern-bg stripes">
-        <div class="content-blob" data-key="q">
+        <div class="content-blob blob1" data-key="q">
             <div class="content-div" data-key="q">
                 <p>'q' is for <b>QUASH</b>.</p>
                 <p>hit the <kbd>q</kbd> key on your keyboard to start workout.</p>
@@ -224,7 +224,7 @@
     </div>
 
     <div class="pattern-bg polka-dots">
-        <div class="content-blob" data-key="r">
+        <div class="content-blob blob2" data-key="r">
             <div class="content-div" data-key="r">
                 <p>'r' is for <b>RAVAGE</b>.</p>
                 <p>hit the <kbd>r</kbd> key on your keyboard to start workout.</p>
@@ -233,7 +233,7 @@
     </div>
 
     <div class="pattern-bg zig-zag">
-        <div class="content-blob" data-key="s">
+        <div class="content-blob blob3" data-key="s">
             <div class="content-div" data-key="s">
                 <p>'s' is for <b>SMASH</b>.</p>
                 <p>hit the <kbd>s</kbd> key on your keyboard to start workout.</p>
@@ -242,7 +242,7 @@
     </div>
 
     <div class="pattern-bg polka-dots">
-        <div class="content-blob" data-key="t">
+        <div class="content-blob blob2" data-key="t">
             <div class="content-div" data-key="t">
                 <p>'t' is for <b>TERMINATE</b>.</p>
                 <p>hit the <kbd>t</kbd> key on your keyboard to start workout.</p>
@@ -251,7 +251,7 @@
     </div>
 
     <div class="pattern-bg stripes">
-        <div class="content-blob" data-key="u">
+        <div class="content-blob blob1" data-key="u">
             <div class="content-div" data-key="u">
                 <p>'u' is for <b>UPROOT</b>.</p>
                 <p>hit the <kbd>u</kbd> key on your keyboard to start workout.</p>
@@ -260,7 +260,7 @@
     </div>
 
     <div class="pattern-bg polka-dots">
-        <div class="content-blob" data-key="v">
+        <div class="content-blob blob2" data-key="v">
             <div class="content-div" data-key="v">
                 <p>'v' is for <b>VENDETTA</b>.</p>
                 <p>hit the <kbd>v</kbd> key on your keyboard to start workout.</p>
@@ -269,7 +269,7 @@
     </div>
 
     <div class="pattern-bg zig-zag">
-        <div class="content-blob" data-key="w">
+        <div class="content-blob blob3" data-key="w">
             <div class="content-div" data-key="w">
                 <p>'w' is for <b>WRECK</b>.</p>
                 <p>hit the <kbd>w</kbd> key on your keyboard to start workout.</p>
@@ -278,7 +278,7 @@
     </div>
 
     <div class="pattern-bg polka-dots">
-        <div class="content-blob" data-key="x">
+        <div class="content-blob blob2" data-key="x">
             <div class="content-div" data-key="x">
                 <p>'x' is for <b>X-OUT</b>.</p>
                 <p>hit the <kbd>x</kbd> key on your keyboard to start workout.</p>
@@ -287,7 +287,7 @@
     </div>
 
     <div class="pattern-bg stripes">
-        <div class="content-blob" data-key="y">
+        <div class="content-blob blob1" data-key="y">
             <div class="content-div" data-key="y">
                 <p>'y' is for <b>YERK</b>.</p>
                 <p>hit the <kbd>y</kbd> key on your keyboard to start workout.</p>
@@ -296,7 +296,7 @@
     </div>
 
     <div class="pattern-bg polka-dots">
-        <div class="content-blob" data-key="z">
+        <div class="content-blob blob2" data-key="z">
             <div class="content-div" data-key="z">
                 <p>'z' is for <b>ZAP</b>.</p>
                 <p>hit the <kbd>z</kbd> key on your keyboard to start workout.</p>
@@ -305,7 +305,7 @@
     </div>
 
     <div class="pattern-bg zig-zag">
-        <div class="content-blob">
+        <div class="content-blob blob3">
             <div class="content-div">
                 <p>Oh, my... What powerful fingers you have!</p>
             </div>
