--- a/level2.html
+++ b/level2.html
@@ -70,7 +70,7 @@
 
     <!-- main content -->
     <div class="pattern-bg stripes">
-        <div class="content-blob">
+        <div class="content-blob blob1">
             <div class="content-div">
                 <h3>AMRAP</h3>
                 <p>as many reps as possible in <span class="timer">?</span><span class="timer-seconds">s</span></p>
@@ -79,7 +79,7 @@
     </div>
 
     <div class="pattern-bg polka-dots">
-        <div class="content-blob">
+        <div class="content-blob blob2">
             <div class="content-div">
                 <h3>EM<span class="clock">O</span>M</h3>
                 <p class="emom-subheader">every minute on the minute</p>
@@ -89,7 +89,7 @@
     </div>
 
     <div class="pattern-bg zig-zag">
-        <div class="content-blob">
+        <div class="content-blob blob3">
             <div class="content-div">
                 <p>are those fireworks coming from your finger tips?!</p>
             </div>
