--- a/level3.html
+++ b/level3.html
@@ -70,7 +70,7 @@
 
     <!-- main content -->
     <div class="pattern-bg stripes">
-        <div class="content-blob">
+        <div class="content-blob blob1">
             <div class="content-div">
                 <h3>WOD 1</h3>
                 <p>workout of the day</p>
@@ -80,7 +80,7 @@
     </div>
 
     <div class="pattern-bg polka-dots">
-        <div class="content-blob">
+        <div class="content-blob blob2">
             <div class="content-div">
                 <h3>WOD 2</h3>
                 <p>workout of the day</p>
@@ -90,7 +90,7 @@
     </div>
 
     <div class="pattern-bg zig-zag">
-        <div class="content-blob">
+        <div class="content-blob blob3">
             <div class="content-div">
                 <p>hasta la vista, baby.</p>
             </div>
