added wiggle.js script to animate blobby shapes on all html pages

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
     <footer class="footer"></footer>
 
     <!-- custom scripts -->
+    <script src="/scripts/wiggle.js"></script>
     <script src="/scripts/swirl.js"></script>
     <script src="/scripts/yellow.js"></script>
     <script src="/scripts/copyright.js"></script>
