--- a/level1.html
+++ b/level1.html
@@ -325,6 +325,7 @@
 
     <!-- custom scripts -->
     <script src="/scripts/yellow.js"></script>
+    <script src="/scripts/wiggle.js"></script>
     <script src="/scripts/highFive.js"></script>
     <script type="module" src="/scripts/words.js"></script>
     <script src="/scripts/alphabet.js"></script>
