--- a/level2.html
+++ b/level2.html
@@ -109,6 +109,7 @@
 
     <!-- custom scripts -->
     <script src="/scripts/yellow.js"></script>
+    <script src="/scripts/wiggle.js"></script>
     <script src="/scripts/highFive.js"></script>
     <script type="module" src="/scripts/words.js"></script>
     <script type="module" src="/scripts/speller.js"></script>
