--- a/level3.html
+++ b/level3.html
@@ -110,6 +110,7 @@
 
     <!-- custom scripts -->
     <script src="/scripts/yellow.js"></script>
+    <script src="/scripts/wiggle.js"></script>
     <script src="/scripts/highFive.js"></script>
     <script src="/scripts/video.js"></script>
     <script src="/scripts/copyright.js"></script>
